- Explicit SBOM route now fails closed when package/component evidence is empty, preventing empty SBOM shells from passing strict container SBOM analysis.
- SBOM JSON parsing now emits bounded package/component counts when present.
- Signature/cert adapter extraction deepened:
- Deterministic PEM block counting for certificate/PKCS7/signature material.
- Binary OID hint counts added for CMS signedData and timestamp EKU indicators.
- DER certificate fallback in explicit `.cer/.crt` strict mode now requires X.509 name OID evidence (`2.5.4.*`), preventing generic large DER blobs from passing as certificate evidence.
- Explicit signature route now requires real envelope/OID/DER evidence; text-only timestamp/chain hints no longer satisfy strict signature validity checks.
- Explicit signature route now rejects tiny generic DER blobs as insufficient strict signature evidence.
- Generic DER fallback in strict signature mode is now limited to certificate extensions (`.cer/.crt`), so `.sig` requires explicit signature-envelope/OID evidence.
- SCM/source evidence adapter extraction deepened:
- Deterministic repo counters now include tree entry count, branch/tag ref counts, detached HEAD indicator, and working-tree entry count.
- SCM adapter now emits deterministic worktree state evidence (staged/unstaged/untracked counts) and `SCM_WORKTREE_DIRTY` when local repo state is dirty.
- SCM fallback hardening:
- When `git` commands are unavailable/failing, adapter now parses native `.git` reference material (`HEAD`, loose refs, packed-refs) deterministically for source evidence.
- SCM strict route now fails closed on partial git/native-ref/status metadata, preventing partial SCM evidence from being treated as complete explicit SCM analysis.
- Image adapter extraction deepened:
- Deterministic header evidence now includes ISO PVD, VHD footer, VHDX signature, QCOW2 magic/version, and VMDK descriptor/sparse-magic hints.